feat: Finalizamos o header e iniciamos a seção sobre.

--- a/index.html
+++ b/index.html
@@ -26,13 +26,28 @@
         <div class="container-grid alinhamento">
             <div class="conteudo-banner">
                 <p>Gamificação Corporativa</p>
-                <h2>Jogar para aprender, Aprender jogando.</h2>
-                <p>Conheça nosso portfólio gamificado</p>
-                <button>Jogar</button>
+                <h2>Jogar para <span>aprender,<br></span>Aprender <span>jogando.</span></h2>      
+                <p>Conheça nosso portfólio gamificado</p>  
+                <button>Jogar</button> 
             </div>
+            
             <img src="img/gif.png" alt="">
-        </div>    
+        </div>
     </div>
+
+    <section id="sobre">
+        <div class="container-sobre">
+            <img src="img/robo.png" alt="">
+            <div class="conteudo-sobre">
+                <h2>Conheça um pouco sobre nós!</h2>
+                <div><p>Nós somos uma empresa em busca de inovação! Nossa empresa se dedica a transformar o ambiente
+                    corporativo através de soluções de gamificação sob medida. Unindo inteligência artificial e design
+                    de jogos, criamos estratégias interativas que elevam a experiência do usuário, impulsionam a
+                    produtividade e motivam equipes.</p>
+                </div>    
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
