feat: Sessão sobre finalizada, iniciamos a sessão dos cases.

--- a/index.html
+++ b/index.html
@@ -20,21 +20,20 @@
                     <a href="#sobre">Sobre</a>
                     <a href="#cases">Serviços</a>
                     <a href="#contato">Contato</a>
+                    <a href="#">Jogar</a>
                 </nav>
             </div>
         </header>
         <div class="container-grid alinhamento">
+            
             <div class="conteudo-banner">
                 <p>Gamificação Corporativa</p>
                 <h2>Jogar para <span>aprender,<br></span>Aprender <span>jogando.</span></h2>      
-                <p>Conheça nosso portfólio gamificado</p>  
-                <button>Jogar</button> 
+                <p>Conheça nosso portfólio gamificado!</p>     
             </div>
-            
             <img src="img/gif.png" alt="">
-        </div>
-    </div>
-
+        </div>         
+    </div> 
     <section id="sobre">
         <div class="container-sobre">
             <img src="img/robo.png" alt="">
@@ -45,6 +44,24 @@
                     de jogos, criamos estratégias interativas que elevam a experiência do usuário, impulsionam a
                     produtividade e motivam equipes.</p>
                 </div>    
+            </div>
+        </div>
+    </section>
+
+    <section id="cases">
+        <p>Veja alguns dos trabalhos que realizamos:</p>
+        <div class="container-cards">
+            <div class="card">
+                <img src="https://unsplash.it/600/400" alt="">
+                <h2>Supermercado</h2>              
+            </div>            
+            <div class="card">
+                <img src="https://unsplash.it/600/400" alt="">
+                <h2>Escola</h2>
+            </div>
+            <div class="card">
+                <img src="https://unsplash.it/600/400" alt="">
+                <h2>Escritório</h2>             
             </div>
         </div>
     </section>
