feat: Foi finalizada a sessão cases, iniciamos a sessão contato.

--- a/index.html
+++ b/index.html
@@ -25,25 +25,27 @@
             </div>
         </header>
         <div class="container-grid alinhamento">
-            
+
             <div class="conteudo-banner">
                 <p>Gamificação Corporativa</p>
-                <h2>Jogar para <span>aprender,<br></span>Aprender <span>jogando.</span></h2>      
-                <p>Conheça nosso portfólio gamificado!</p>     
+                <h2>Jogar para <span>aprender,<br></span>Aprender <span>jogando.</span></h2>
+                <p>Conheça nosso portfólio gamificado!</p>
             </div>
-            <img src="img/gif.png" alt="">
-        </div>         
-    </div> 
+            <img src="img/gif.gif" alt="">
+        </div>
+    </div>
     <section id="sobre">
         <div class="container-sobre">
-            <img src="img/robo.png" alt="">
+            <img src="img/robo-gaming.png" alt="">
             <div class="conteudo-sobre">
                 <h2>Conheça um pouco sobre nós!</h2>
-                <div><p>Nós somos uma empresa em busca de inovação! Nossa empresa se dedica a transformar o ambiente
-                    corporativo através de soluções de gamificação sob medida. Unindo inteligência artificial e design
-                    de jogos, criamos estratégias interativas que elevam a experiência do usuário, impulsionam a
-                    produtividade e motivam equipes.</p>
-                </div>    
+                <div>
+                    <p>Nós somos uma empresa em busca de inovação! Nossa empresa se dedica a transformar o ambiente
+                        corporativo através de soluções de gamificação sob medida. Unindo inteligência artificial e
+                        design
+                        de jogos, criamos estratégias interativas que elevam a experiência do usuário, impulsionam a
+                        produtividade e motivam equipes.</p>
+                </div>
             </div>
         </div>
     </section>
@@ -52,18 +54,40 @@
         <p>Veja alguns dos trabalhos que realizamos:</p>
         <div class="container-cards">
             <div class="card">
-                <img src="https://unsplash.it/600/400" alt="">
-                <h2>Supermercado</h2>              
-            </div>            
+                <img src="img/mercado.png" alt="">
+                <h2>Supermercado</h2>
+            </div>
             <div class="card">
-                <img src="https://unsplash.it/600/400" alt="">
+                <img src="img/escola.png" alt="">
                 <h2>Escola</h2>
             </div>
             <div class="card">
-                <img src="https://unsplash.it/600/400" alt="">
-                <h2>Escritório</h2>             
+                <img src="img/escritorio.png" alt="">
+                <h2>Escritório</h2>
             </div>
         </div>
+    </section>
+
+    <section id="contato">
+        <img src="img/robo-contato.png" alt="">
+        <div class="conteudo-contato">
+            <h2>Contate a gente!</h2>
+            <form>
+                <div class="campo">
+                    <label for="campo-nome">Nome</label>
+                    <input id="campo-nome" placeholder="Digite seu nome...">
+                </div>
+                <div class="campo-textarea">
+                    <label for="campo-texto">Telefone</label>
+                    <textarea name="" id="campo-texto" cols="30" rows="10"
+                        placeholder="Digite seu telefone..."></textarea>
+                </div>
+                <div class="campo">
+                    <label for="campo-email">E-mail</label>
+                    <input type="email" name="" id="campo-email" placeholder="Digite seu e-mail...">
+                </div>
+                <button type="submit">Enviar</button>
+            </form>
     </section>
 </body>
 
