feat: finalizada toda a responsividade do site até 500px

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="texto-sobre">
                 <h2>Conheça um pouco sobre nós!</h2>
                     <p>Nós somos uma empresa em busca de inovação! Nossa empresa se dedica a transformar o ambiente
-                        corporativo através de soluções de gamificação sob medida. Unindo inteligência artificial e
+                        corporativo através de soluções de gamificação sob medida. <p> Unindo inteligência artificial e
                         design
                         de jogos, criamos estratégias interativas que elevam a experiência do usuário, impulsionam a
                         produtividade e motivam equipes.</p>
