--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
 </head>
 
 <body>
@@ -16,13 +17,16 @@
         <header>
             <div class="container-grid">
                 <img src="img/logo.svg" alt="Logo da empresa Playify">
-                <nav class="menu">
+                <nav id= "menu" class="menu">
                     <a href="#sobre">Sobre</a>
                     <a href="#cases">Serviços</a>
                     <a href="#contato">Contato</a>
                     <a href="#">Jogar</a>
                 </nav>
-                <button><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"/></svg></button>
+                <button onclick="abrirFecharMenu()">
+                    <svg id="icone-barras" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"/></svg>
+                    <svg id="icone-x" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path fill="#ffffff" d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"/></svg>
+                </button>
             </div>
         </header>
         <div class="container-grid alinhamento">
@@ -73,18 +77,18 @@
         <img src="img/robo-contato.png" alt="Imagem de um robo atendendo um telefone">
         <div class="conteudo-contato">
             <h2>Contate a gente!</h2>
-            <form>
+            <form onsubmit="solicitarContato(event)">
                 <div class="campo">
                     <label for="campo-nome">Nome</label>
                     <input id="campo-nome" placeholder="Digite seu nome...">
                 </div>
                 <div class="campo">
                     <label for="campo-nome">Telefone</label>
-                    <input id="campo-nome" placeholder="Digite seu numero de telefone...">
+                    <input id="campo-telefone" placeholder="Digite seu numero de telefone...">
                 </div> 
                 <div class="campo">
                     <label for="campo-email">E-mail</label>
-                    <input type="email" name="" id="campo-email" placeholder="Digite seu e-mail...">
+                    <input id="campo-email" type="email" name="" placeholder="Digite seu e-mail...">
                 </div>
                 <button type="submit">Enviar</button>
             </form>
